--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "dependencies": {
-    "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typeorm": "^0.3.20",
+    "typescript": "^5.5.4",
+    "uuid": "^10.0.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "dev": "ts-node-dev src/app.ts",
+    "migrate:run": "ts-node ./node_modules/typeorm/cli.js migration:run --dataSource ./src/data-source.ts",
+    "migrate:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/data-source.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "nodemon": "^3.1.4"
+    "@types/node": "^22.5.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
