--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es6",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "strictPropertyInitialization": false
+  },
+  "scripts": {
+    "start": "ts-node src/app.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
