--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
-version: "3"
 services:
+  db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_USER: ${PGUSER}
+      POSTGRES_PASSWORD: ${PGPASSWORD}
+      POSTGRES_DB: readings_db
+    ports:
+      - "5432:5432"
+    networks:
+      - app-network
   app:
     build: .
     ports:
@@ -19,18 +28,7 @@ services:
       - /app/node_modules
     networks:
       - app-network
-    command: sh -c "npm run migrate:run && npm run dev"
-
-  db:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: ${PGUSER}
-      POSTGRES_PASSWORD: ${PGPASSWORD}
-      POSTGRES_DB: readings_db
-    ports:
-      - "5432:5432"
-    networks:
-      - app-network
+    command: sh -c "npm run migrate:run && npm start"
 
 networks:
   app-network:
