--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "joi": "^17.13.3",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
@@ -11,13 +17,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/app.ts",
+    "start": "nodemon --legacy-watch src/app.ts",
     "migrate:run": "ts-node ./node_modules/typeorm/cli.js migration:run --dataSource ./src/data-source.ts",
     "migrate:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/data-source.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
-    "ts-node-dev": "^2.0.0"
+    "nodemon": "^3.1.4"
   }
 }
