--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^7.12.1",
     "@google/generative-ai": "^0.17.1",
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
@@ -8,6 +9,8 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "joi": "^17.13.3",
+    "mime-types": "^2.1.35",
+    "node-cache": "^5.1.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
@@ -17,14 +20,26 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "nodemon --legacy-watch src/app.ts",
+    "dev": "nodemon --legacy-watch src/app.ts",
+    "start": "docker-compose up --build",
     "migrate:run": "ts-node ./node_modules/typeorm/cli.js migration:run --dataSource ./src/data-source.ts",
-    "migrate:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/data-source.ts"
+    "migrate:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert --dataSource ./src/data-source.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.5.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "nodemon": "^3.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
