--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "start": "nodemon src/app.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*"],
   "exclude": ["node_modules"]
 }
